second test:  should return a failure

--- a/build.gradle
+++ b/build.gradle
@@ -60,3 +60,17 @@ test {
         exceptionFormat TestExceptionFormat.FULL
     }
 }
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.freeCompilerArgs = ["-Xallow-result-return-type"]
+
+
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.freeCompilerArgs = ["-Xallow-result-return-type"]
+}
+
+
+
