--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.5.10'
     repositories {
         mavenCentral()
     }
@@ -24,10 +24,10 @@ repositories {
 }
 
 ext {
-    junitVersion = "5.4.2"
     slf4jVersion = "1.7.26"
     assertjVersion = "3.12.2"
     kotlintestVersion = "3.3.2"
+    kotestVersion = "4.6.3"
 }
 
 
@@ -35,24 +35,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.slf4j:slf4j-nop:$slf4jVersion"
 
+    testImplementation "io.kotest:kotest-runner-junit5:$kotestVersion"
+    testImplementation "io.kotest:kotest-assertions-core:$kotestVersion"
 
-    
-    testImplementation "org.assertj:assertj-core:$assertjVersion"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-    testImplementation "io.kotlintest:kotlintest-runner-junit5:$kotlintestVersion"
-
-    
-    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-}
-
-jar {
-    manifest { attributes 'Main-Class': 'example.MainKt' }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
 wrapper {
-    gradleVersion = "4.10.2"
+    gradleVersion = "7.3"
 }
 
 test {
