--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,10 @@ ext {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.slf4j:slf4j-nop:$slf4jVersion"
+    implementation("io.arrow-kt:arrow-core:1.0.1")
 
     testImplementation "io.kotest:kotest-runner-junit5:$kotestVersion"
     testImplementation "io.kotest:kotest-assertions-core:$kotestVersion"
-
 }
 
 wrapper {
